fix for 2-line nav on smaller screens

--- a/config/testreport/css/default.css
+++ b/config/testreport/css/default.css
@@ -396,6 +396,13 @@ template {
     --url-hover-shadow-color: var(--navigation-hover-shadow-color);
 }
 
+@media screen and (max-width:1000px) {
+    :root {
+        --table-head-sticky-position: calc(1rem * 3 * var(--navigation-line-height));
+        --header-sticky-position: calc(1rem * 2 * var(--navigation-line-height) - 8px);
+    }
+}
+
 /*
     Breakpoints used when needed
     https://getbootstrap.com/docs/5.0/layout/breakpoints/
